objects/ssot__InspectionAssessmentIndicator__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssessmentIndicatorDefinitionId__c</fullName>
        <label>Assessment Indicator Definition</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentIndicatorResult__c</fullName>
        <label>Assessment Indicator Result</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentTaskId__c</fullName>
        <label>Assessment Task</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisplayOrderNumber__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FieldResponseDateTime__c</fullName>
        <label>Field Response Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FieldResponseDecimalNumber__c</fullName>
        <label>Field Response Decimal</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FieldResponseIntegerNumber__c</fullName>
        <label>Field Response Integer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FieldResponsePercentage__c</fullName>
        <label>Field Response Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FieldResponseText__c</fullName>
        <label>Field Response Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Inspection Assessment Indicator Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512777510_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InspectionAssessmentIndicator_Assess_rel</label>
        <referenceTo>ssot__AssessmentIndicatorDefinition__dlm</referenceTo>
        <relationshipLabel>InspectionAssessmentIndicator_Assess_rel</relationshipLabel>
        <relationshipName>rel_1739512777510_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>